Update members API endpoint
